# advent-of-code

./: .gitignore  Cargo.tom  Cargo.toml  \  test.html
.github/workflows/: main.yml
parser/: Cargo.toml
parser/src/: downloader.rs  high_level.rs  lib.rs
parser/src/low_level/: edition.rs  low.rs  mod.rs
parser/test_files/complete/2021/: day2.html
parser/test_files/complete/2022/: day2.html  day3.html  day4.html
parser/test_files/part1/2015/: day10.html
parser/test_files/part1/2018/: day11.html
parser/test_files/part2/2019/: day1.html
parser/test_files/solved/2022/: day1.html
src/: core.rs  day1.rs  day2.rs  lib.rs  main.rs  traits.rs  util.rs
src/helper/: matrix.rs  matrix3d.rs  mod.rs
src/years/: mod.rs
src/years/y2020/: day10.rs  day11.rs  day14.rs  day15.rs  day16.rs  day2.rs  day4.rs  day5.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/years/y2021/: day1.rs  day10.rs  day12.rs  day13.rs  day14.rs  day15.rs  day17.rs  day18.rs  day2.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
util/: Cargo.toml
util/src/: lib.rs  matrix.rs  matrix3d.rs  mod.rs  parser.rs  problems.rs  runner.rs  shifter.rs  traits.rs
y2019/: Cargo.toml
y2020/: Cargo.toml
y2020/src/: day1.rs  day12.rs  day13.rs  day15.rs  day25.rs  day3.rs  day6.rs  day7.rs  mod.rs
y2021/: Cargo.toml
y2021/src/: day1.rs  day10.rs  day11.rs  day15.rs  day16.rs  day18.rs  day22.rs  day24.rs  day5.rs  day6.rs  day7.rs  day9.rs
y2022/: Cargo.toml
