[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.0.0-beta.5"
scanfmt = "0.1"
reqwest = { version = "0.11.7", default-features = false, features = ["blocking", "cookies", "cookie_store", "rustls-tls"] }
select = "0.5"
chrono = "0.4"

serde = { version = "1.0", features = ["derive", "rc"] }
log = "0.4"
env_logger = "0.9"
serde_fs = { path = "../serde_fs/" }
nom = "7.1.0"
rand = "0.8"
vector2d = "2.2.0"
