[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
enum-map = "2.4.1"
log = "0.4"
reqwest = { version = "0.11.7", default-features = false, features = ["blocking", "cookies", "cookie_store", "rustls-tls"] }
select = "0.5"
smallvec = { version = "1.10.0", features = ["union"] }

[dev-dependencies]
env_logger = "0.10.0"
pretty_assertions = "1.3.0"
test-log = "0.2.11"
