[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9"
itertools = "0.10.3"
log = "0.4"
pathfinding = "3.0.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_fs = { path = "../../serde_fs/" }
parser = { path = "../parser/" }
text_trees = "0.1.2"
chrono = "0.4.23"
chrono-tz = "0.8.1"
clap = { version = "4.0.29", features = ["derive"] }
anyhow = "1.0.66"
