[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9"
itertools = "0.10.3"
log = "0.4"
pathfinding = "3.0.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_fs = { git = " https://github.com/TroyNeubauer/serde_fs.git", rev = "8f3e8825b4b7f878d41a28671dd7a516b5b290fb" }
parser = { path = "../parser/" }
chrono = "0.4.23"
chrono-tz = "0.8.1"
clap = { version = "4.0.29", features = ["derive"] }
anyhow = "1.0.66"
rand = "0.8.5"
